<resources>
    <string name="app_name">Clase3Controls</string>
    <string name="title_activity_controles">ControlesActivity</string>

    <string name="un_text_view">Un TextView</string>
    <string name="action_settings">Settings</string>
    <string name="un_edit_text">Un EditText</string>
    <string name="un_button">Un Button</string>
    <string name="un_toggle_button">Un ToggleButton</string>
    <string name="ingrese_edit_text">Ingrese un dato</string>
    <string name="encendido">encendido</string>
    <string name="apagado">apagado</string>
    <string name="un_checkbox">Un Check</string>

</resources>
